# ledzeppelin

./: ._v.mjs  .gitignore  CNAME  LEAP.md  LICENSE  README.md  index.html  leap-bridge.js  manifest.webmanifest  package-lock.json  package.json  service-worker.js  start.bat  start.command
.githooks/: pre-commit
control/: index.html  manifest.webmanifest  remote.js  service-worker.js
design/: CAPTURE.md  FIGMA.md  index.html  tokens.json  tokens.tokens-studio.json
docs/: PACKAGING.md  api.md  deploy-raspberry-pi.md  design-language.md  design-system.md  dmx-fixtures.md  feature-gaps.md  next-horizons.md  optimizations.md  unified-fixtures.md
guide/: 01-what-is-led-zeppelin.md  02-concepts.md  03-getting-started.md  04-devices-and-scanning.md  05-fixtures-and-inventory.md  06-canvas-sources-effects.md  07-scenes.md  08-mappings.md  09-importing-from-ledger.md  10-output-and-calibration.md  11-deploying.md  12-troubleshooting.md  13-glossary.md  README.md  guide.js  index.html
inventory/: index.html  inventory.js
leap/: README.md  index.html  leapmotion-project.json
leap/osc/: CMakeLists.txt  README.md  channels.c  channels.h  com.ledzeppelin.leap-osc.plist  feed.h  feed_fake.c  feed_leapc.c  main.c  osc.c  osc.h  run-tests.sh  test_channels.c  test_osc.c
mappings/: index.html  mappings.js
pi/: README.md  lz-kiosk.sh  lz-watchdog.service  lz-watchdog.sh
recordings/: probeshow.json  probeshow.lzshow
remote/: index.html  manifest.webmanifest  remote.js  service-worker.js
scripts/: build-app.sh  build-macapp.sh  launcher.swift  tent-remap.mjs
(+240 files in other folders)
